[package]
name = "memenow-storage-cf-workers"
version = "0.1.0"
edition = "2021"
rust-version = "1.82"
description = "High-performance file storage service built with Cloudflare Workers and Rust"
license = "Apache-2.0"
repository = "https://github.com/memenow/memenow-storage-cf-workers"
readme = "README.md"
keywords = ["cloudflare", "workers", "storage", "upload", "r2"]
categories = ["web-programming", "filesystem"]

[package.metadata.release]
release = false

# https://github.com/rustwasm/wasm-pack/issues/1247
[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[lib]
crate-type = ["cdylib"]

[dependencies]
worker = { version = "0.6.1", features = ["http"] }
console_error_panic_hook = { version = "0.1.7" }
http = "1.1"
serde_json = "1.0"
cfg-if = "1.0"
futures = "0.3"
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0"
chrono = { version = "0.4", features = ["serde"] }
sha2 = "0.10"
hex = "0.4"
async-trait = "0.1"
base64 = "0.22"
uuid = { version = "1.10", features = ["serde", "v4", "js"] }

[dependencies.web-sys]
version = "0.3.60"
features = [
    "console",
]

[profile.release]
lto = true
opt-level = "s"
