[package]
name = "memenow-storage-cf-workers"
version = "0.1.0"
edition = "2021"
rust-version = "1.82"
description = "High-performance file storage service built with Cloudflare Workers and Rust"
license = "Apache-2.0"
repository = "https://github.com/memenow/memenow-storage-cf-workers"
readme = "README.md"
keywords = ["cloudflare", "workers", "storage", "upload", "r2"]
categories = ["web-programming", "filesystem"]

[package.metadata.release]
release = false

# https://github.com/rustwasm/wasm-pack/issues/1247
[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[lib]
crate-type = ["cdylib"]

[dependencies]
worker = { version = "0.8", features = ["http", "d1"] }
console_error_panic_hook = { version = "0.1" }
http = "1.4"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
thiserror = "2.0"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.23", features = ["serde", "v4", "js"] }

[profile.release]
lto = true
opt-level = "s"
